--- a/index.html
+++ b/index.html
@@ -14,12 +14,32 @@
       margin: 0;
       padding: 0;
     }
+    header {
+      border-bottom: 1px solid #333;
+      padding: 12px 20px;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 1.4rem;
+    }
+    header nav {
+      margin-top: 4px;
+      font-size: 0.9rem;
+    }
+    header a {
+      color: #9cd3ff;
+      text-decoration: none;
+      margin-right: 12px;
+    }
+    header a:hover {
+      text-decoration: underline;
+    }
     main {
       max-width: 720px;
       margin: 0 auto;
-      padding: 40px 20px;
+      padding: 32px 20px 40px;
     }
-    h1, h2, h3 {
+    h2, h3 {
       line-height: 1.3;
       margin-top: 2rem;
       margin-bottom: 1rem;
@@ -41,13 +61,24 @@
       margin-top: 3rem;
       font-size: 0.9rem;
       opacity: 0.8;
+      border-top: 1px solid #333;
+      padding-top: 12px;
     }
   </style>
 </head>
 
 <body>
+  <header>
+    <h1>The Fox’s Anvil</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="#tools">Tools</a>
+      <a href="https://jacobo-dm.github.io/mythwear-commons/" target="_blank">MythWear Commons</a>
+    </nav>
+  </header>
+
   <main>
-    <h1>The Fox’s Anvil · Open Resilience Tools</h1>
+    <h2>Open Resilience Tools</h2>
 
     <p>
       The Fox’s Anvil is a commons-based workshop for tools that meet the world
@@ -57,33 +88,23 @@
     </p>
 
     <p>
-      All designs shared here are part of an open hardware commons. They are meant
-      to be built, repaired, adapted, and improved by farmers, welders, mechanics,
+      All designs shared here remain part of the Commons. They are meant to be
+      built, repaired, adapted, and improved by farmers, welders, mechanics,
       neighbors, students, and volunteers—anyone willing to take responsibility
       for their use.
     </p>
 
-    <h2>Tools in this Forge</h2>
+    <h2 id="tools">Tools in this Forge</h2>
     <ul>
       <li><a href="spoovel/index.html">The Spoovel · V1</a></li>
-      <li><a href="medicinewheel/index.html">MedicineWheel Mechanism · V1</a></li>
-      <li><a href="commons-conveyor/index.html">Commons Conveyor · V1</a></li>
-      <li><a href="turtleback/index.html">TurtleBack Field Station · V1</a></li>
-      <li><em>More tools will be added as they are ready.</em></li>
+      <li><em>Additional tools will be added as they are ready.</em></li>
     </ul>
 
-    <h2>Relation to MythWear</h2>
+    <h3>Relation to MythWear</h3>
     <p>
-      MythWear Commons focuses on body-scale tools, garments, and movement companions.
-      The Fox’s Anvil focuses on land-scale and infrastructure-scale tools.
-      They are siblings: one close to the skin, one close to the ground.
-    </p>
-
-    <p>
-      For somatic and wearable tools, visit:
-      <a href="https://mythwear-commons.netlify.app/" target="_blank">
-        MythWear Commons
-      </a>.
+      MythWear Commons focuses on body-scale tools, garments, and movement
+      companions. The Fox’s Anvil focuses on land-scale and infrastructure-scale
+      tools. They are siblings: one close to the skin, one close to the ground.
     </p>
 
     <footer>
