--- a/index.html
+++ b/index.html
@@ -113,6 +113,23 @@
         Build with care. Use with responsibility. Share improvements.
       </p>
     </footer>
+    <h2>Schematic & Documentation</h2>
+
+<p>
+  The Spoovel is a low-tech, field-repairable resilience tool. Its schematic is kept
+  intentionally simple so that communities can recreate, adapt, and improve the design.
+</p>
+
+<p>
+  👉 <a href="Spoovel_Schematic.html" target="_blank">
+    View the Spoovel Schematic (HTML)
+  </a>
+</p>
+
+<p>
+  If you build or modify the Spoovel, feel free to fork the repository and add your
+  improvements to help others in the field.
+</p>
   </main>
 </body>
 </html>
